[gd_scene load_steps=12 format=2]

[ext_resource path="res://GlobalVariables.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/Control.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Items/clock.png" type="Texture" id=4]
[ext_resource path="res://GUI/Panel.gd" type="Script" id=5]
[ext_resource path="res://GUI/Timer.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Items/beer.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Items/bluebook.png" type="Texture" id=8]
[ext_resource path="res://GUI/Item Count.gd" type="Script" id=9]
[ext_resource path="res://GUI/LifeXP.gd" type="Script" id=10]
[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=11]

[node name="Global" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Timer" type="ColorRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = 46.0
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clock" type="Sprite" parent="CanvasLayer/Timer"]
position = Vector2( 21.5754, 19.3969 )
scale = Vector2( 0.0660479, 0.0659268 )
texture = ExtResource( 4 )

[node name="Minutes" type="Label" parent="CanvasLayer/Timer"]
margin_left = 27.7795
margin_top = 4.7622
margin_right = 67.7795
margin_bottom = 31.7622
custom_fonts/font = ExtResource( 11 )
text = "00"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Timer"]
margin_left = 72.7937
margin_top = 4.2063
margin_right = 91.7937
margin_bottom = 31.2063
custom_fonts/font = ExtResource( 11 )
text = ":"

[node name="Seconds" type="Label" parent="CanvasLayer/Timer"]
margin_left = 90.085
margin_top = 4.7622
margin_right = 130.085
margin_bottom = 31.7622
custom_fonts/font = ExtResource( 11 )
text = "00"

[node name="Control" type="Control" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 48.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="CanvasLayer/Control/Panel"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel"]
margin_left = -0.420456
margin_top = 0.840912
margin_right = 39.5795
margin_bottom = 40.8409
__meta__ = {
"_edit_use_anchors_": false
}

[node name="show" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer"]
margin_right = 40.0
margin_bottom = 20.0
text = "+"

[node name="ItemCount" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 72.0
color = Color( 0, 0, 0, 0.627451 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="beer" type="Sprite" parent="CanvasLayer/ItemCount"]
position = Vector2( 18.2782, 21.9444 )
scale = Vector2( 0.0263351, 0.0223332 )
texture = ExtResource( 7 )

[node name="bluebook" type="Sprite" parent="CanvasLayer/ItemCount"]
position = Vector2( 105.999, 21.7954 )
scale = Vector2( 0.730522, 0.85754 )
texture = ExtResource( 8 )

[node name="x" type="Label" parent="CanvasLayer/ItemCount"]
margin_left = 126.271
margin_top = 7.53546
margin_right = 143.271
margin_bottom = 34.5355
custom_fonts/font = ExtResource( 11 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x2" type="Label" parent="CanvasLayer/ItemCount"]
margin_left = 40.0818
margin_top = 6.74645
margin_right = 80.0818
margin_bottom = 33.7465
custom_fonts/font = ExtResource( 11 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no_beers" type="Label" parent="CanvasLayer/ItemCount"]
margin_left = 57.2315
margin_top = 7.67877
margin_right = 85.2315
margin_bottom = 34.6788
custom_fonts/font = ExtResource( 11 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no_books" type="Label" parent="CanvasLayer/ItemCount"]
margin_left = 142.866
margin_top = 8.73071
margin_right = 182.866
margin_bottom = 35.7307
custom_fonts/font = ExtResource( 11 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeXP" type="ColorRect" parent="CanvasLayer"]
margin_left = 432.0
margin_top = 48.0
margin_right = 600.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.627451 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="ColorRect" parent="CanvasLayer/LifeXP"]
margin_left = 2.0
margin_top = 2.0
margin_right = 167.0
margin_bottom = 16.0
color = Color( 1, 0, 0, 1 )

[node name="Timer" type="Timer" parent="."]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 336, 264 )
z_index = 100
[connection signal="player_beers_changed" from="Player" to="CanvasLayer/ItemCount" method="_on_Player_player_beers_changed"]
[connection signal="player_books_changed" from="Player" to="CanvasLayer/ItemCount" method="_on_Player_player_books_changed"]
[connection signal="player_stats_changed" from="Player" to="CanvasLayer/LifeXP" method="_on_Player_player_stats_changed"]
